no longer stretch fair overview imgae

--- a/apps/fair/stylesheets/overview.styl
+++ b/apps/fair/stylesheets/overview.styl
@@ -105,6 +105,8 @@ left-column-width = 200px
     height: browse-container-height
     width: browse-container-width
     background-color #000
+    background no-repeat center center
+    background-size cover
     &:hover
       > .img
         opacity 0.5
